[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Some examples of use cases with the HelpMeFindLaw Developer API."
authors = ["Jordan Parker <jordan.parker@helpmefindlaw.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.285"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
langchain-experimental = "^0.0.17"
openai = "^0.28.0"
typer = "^0.9.0"
rich = "^13.5.3"
duckduckgo-search = "^3.8.5"
streamlit = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
contract-drafting-app = "streamlit run contract-drafting/app.py"
