[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Jordan Parker <jordanhparker6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.295"
streamlit = "^1.26.0"
openai = "^0.28.0"
httpx = "^0.25.0"
duckduckgo-search = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
